--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -p 3002",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
+    "preview": "nuxt preview -p 3002",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
@@ -14,7 +14,8 @@
     "@nuxthq/studio": "1.0.6",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "3.1.1",
-    "nuxt": "3.9.1",
+    "nuxt": "^3.10.3",
+    "nuxt-aos": "^1.2.4",
     "nuxt-icon": "0.6.7",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.9",
@@ -24,6 +25,9 @@
     "@iconify-json/lucide": "1.1.145",
     "@nuxt/image": "1.1.0",
     "@nuxt/ui": "2.11.1",
+    "@nuxtjs/device": "^3.1.1",
+    "@vueuse/core": "^10.9.0",
+    "clipboard": "^2.0.11",
     "vue-use-fixed-header": "^2.0.0"
   }
 }
