--- a/package.json
+++ b/package.json
@@ -3,31 +3,33 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev -p 3002",
+    "dev": "nuxt dev --host -p 3002",
     "generate": "nuxt generate",
     "preview": "nuxt preview -p 3002",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.10.0",
-    "@nuxt/devtools": "1.0.5",
-    "@nuxthq/studio": "1.0.6",
-    "@nuxtjs/fontaine": "^0.4.1",
-    "@nuxtjs/google-fonts": "3.1.1",
-    "nuxt": "^3.10.3",
-    "nuxt-aos": "^1.2.4",
-    "nuxt-icon": "0.6.7",
-    "prettier": "3.1.1",
-    "prettier-plugin-tailwindcss": "0.5.9",
-    "yarn-upgrade-all": "^0.7.2"
+    "@iconify-json/mdi": "^1.2.3",
+    "@nuxt/content": "^3.5.1",
+    "@nuxt/icon": "^1.12.0",
+    "@nuxthq/studio": "^2.2.1",
+    "@nuxtjs/fontaine": "^0.5.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "nuxt": "^4.2.2",
+    "nuxt-aos": "^1.2.5",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2"
   },
   "dependencies": {
-    "@iconify-json/lucide": "1.1.145",
-    "@nuxt/image": "1.1.0",
-    "@nuxt/ui": "2.11.1",
-    "@nuxtjs/device": "^3.1.1",
-    "@vueuse/core": "^10.9.0",
+    "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/lucide": "^1.2.82",
+    "@iconify-json/solar": "^1.2.0",
+    "@nuxt/image": "^1.10.0",
+    "@nuxt/ui": "^3.1.2",
+    "@nuxtjs/device": "^3.2.4",
+    "@vueuse/core": "^12.8.2",
+    "better-sqlite3": "^12.5.0",
     "clipboard": "^2.0.11",
-    "vue-use-fixed-header": "^2.0.0"
+    "vue-use-fixed-header": "^2.0.3"
   }
 }
